...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    android:id="@+id/QuestionnaireActivity"
    tools:context=".activities.QuestionnaireActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="114dp"
...
