...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueBackground"
    android:visibility="visible"
    android:id="@+id/authenticationActivity"
    tools:context=".activities.AuthenticationActivity">

    <Button
        android:id="@+id/buttonForgottenPwd"
        android:layout_width="299dp"
        android:layout_height="30dp"
...
